--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.0",
     "bcryptjs": "^2.4.3",
+    "clsx": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
     "next": "14.0.1",
